# teems-haskell

./: .gitignore  LICENSE  README.md  package.yaml  teems-haskell.cabal
.stack-work/install/x86_64-osx/lts-11.13/8.2.2/flag-cache/: Glob-0.9.2-B0gAg5I1EFbLLrqvbBP6OJ  aeson-1.2.4.0-JlJir1yJNXEp1ZIjSTcVF  ansi-terminal-0.8.0.4-H5HxnxNyY9rFpSVgr55Piv  ansi-wl-pprint-0.6.8.2-9xuhzBw0sxT3GcMo3MQQvg  base-compat-0.9.3-915GC5pH10BBmcMnCvMsPA  colour-2.3.4-3MiiEznBxpfEYrMTHbnSer  dlist-0.8.0.4-C5jxmU4NyxKI1pN7pAcXnu  optparse-applicative-0.14.2.0-HRm2K9gg7My4NoINALecSL  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  tagged-0.8.5-HviTdonkllN1ZD6he1Zn8I  th-abstraction-0.2.6.0-KdJUlqAwMfUIgxZVMgLLVd  time-locale-compat-0.1.1.4-4FewSj9xNz5KwikEo4XZpe  transformers-compat-0.5.1.4-EAh8Ccrgitz4vTZtbTPyCM  unordered-containers-0.2.9.0-AID53f8BSxj1wBLxJT9npu  uuid-types-1.0.3-Jnk9S7J8OCa1ykF07JJwq0
app/: Main.hs
src/: Alacritty.hs  App.hs  CLI.hs  Colors.hs  Lib.hs  Main.hs  Types.hs  Util.hs  X.hs  XTerm.hs
src/Apps/: Alacritty.hs  Apps.hs  ConfigCreator.hs  Kitty.hs  Termite.hs  Util.hs  X.hs  XTerm.hs
src/Apps/Internal/: Alacritty.hs  ConfigCreator.hs  Kitty.hs  MakeTransform.hs  Termite.hs  X.hs  XTerm.hs  XUtils.hs
src/Parser/: Internal.hs
src/Types/Internal/: Colors.hs  Exceptions.hs  Misc.hs
src/Util/: Internal.hs
test/: AlacrittySpec.hs  ColorSpec.hs  ColorsSpec.hs  KittySpec.hs  Spec.hs  TermiteSpec.hs  TestUtils.hs  TypesSpec.hs  XSpec.hs  XTermSpec.hs
