name:                teems-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/teems-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      Alacritty
    , X
    , Lib
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , trifecta
    , directory
    , aeson
    , containers
    , text
  default-language: Haskell2010

executable teems-haskell-exe
  hs-source-dirs:      app
  ghc-options:         -Wall
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Glob
                     , text
                     , directory
                     , containers
                     , aeson
                     , bytestring
                     , optparse-applicative
                     , trifecta
                     , safe-exceptions
                     , teems-haskell


test-suite teems-haskell-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , teems-haskell
    , hspec
    , trifecta
    , parsers
    , ansi-wl-pprint
    , containers
    , raw-strings-qq
  default-language: Haskell2010
