name:                teems-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/teems-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Florian Beeres
maintainer:          yuuki@protonmail.com
copyright:           2018 Florian Beeres
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
    Apps.Apps
    , Types
    , Apps.Internal.Alacritty
    , Apps.Internal.ConfigCreator
    , Apps.Internal.X
    , Apps.Internal.XTerm
    , Apps.Internal.Termite
    , Apps.Internal.Kitty
    , Util.Internal
  other-modules:
    Parser.Internal
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , trifecta
    , directory
    , aeson
    , containers
    , parsers
    , text
    , safe-exceptions
    , vector
    , scientific
  default-language: Haskell2010

executable teems-haskell
  hs-source-dirs:      app
  ghc-options:         -Wall -O2
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Glob
                     , text
                     , directory
                     , containers
                     , aeson
                     , bytestring
                     , optparse-applicative
                     , trifecta
                     , parsers
                     , safe-exceptions
                     , scientific
                     , teems-haskell


test-suite teems-haskell-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  other-modules:
    AlacrittySpec
    , TypesSpec
    , KittySpec
    , TermiteSpec
    , TestUtils
    , XSpec
    , XTermSpec
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , teems-haskell
    , hspec
    , trifecta
    , aeson
    , parsers
    , containers
  default-language: Haskell2010
